additional responsive elements added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,43 +1,43 @@
+/* CORE */
 body {
 	margin: 0;
 	padding: 0;
-	width:100%;
-	height:100%;
-  	font-family: "Cambria", sans-serif;
+	font-family: "Cambria", sans-serif;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
 }
-
+/* SHOWCASE */
 #showcase {
-	background: url("../images/image5.png") center center;
-	background-size: cover;
-	border-bottom: 3px solid #0dc17c;
-	border-top: 1px solid #111;  
-	background-attachment: fixed; 
+	background-color: #000;
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	padding: 0;
 }
-#showcase .row {
-}
-
 /*SEARCH FORM*/
-.hero-text {
-	color:  #0e775b;
-	font-weight: bold;
-	text-transform: uppercase;
+.search-section {	
+	display: flex;	
+	width: 80%;
+	align-items: center;
+	justify-content: center;
 }
-.search-section {
-	text-align: center;
-}
-.search-section form {
+#submit-form {
+	display: flex;
+	flex-direction: column;
+	width: 45%;	
+	height: 450px;
 	background: linear-gradient(#1b1b1b, #111);
 	border: 1px solid #000;
 	box-shadow: inset 0 0 0 1px #272727;
-	display: inline-block;
-	font-size: 0px;
-	padding: 40px 20px;
+	padding: 5%;
 	position: relative;
 	z-index: 1;
-	margin-bottom: 50px;
-	margin-top: 50px;
-	height: 450px;
 	opacity: 0.9;
+	text-align: center;
 }
 .search-section input {
 	background: #222;	
@@ -48,39 +48,28 @@ body {
 	color: #888;
 	font-size: 15px;
 	font-weight: 400;
-	height: 40px;
-	margin: 10px;
+	height: 10%;
+	margin: 1%;
 	padding: 0 10px;
 	text-shadow: 0 -1px 0 #000;
-	width: 400px;
 }
 .search-section label {
-	height: 40px;
-	width: 400px;
-	line-height: 40px;
-	min-width:400px;
-	min-height: 40px;
 	color:#fff;	
 	position: relative;
 	z-index: 10;
-	display:block;
 	font-size:26px;
-	margin:0;
-	padding:0;
 	font-weight: bold;
+	margin-bottom: 2%;
 }
 .ie .search-section input {
 	line-height: 40px;
 }
-
 .search-section input::-webkit-input-placeholder {
    color: #888;
 }
-
 .search-section input:-moz-placeholder {
    color: #888;
 }
-
 .search-section input:focus {
 	animation: glow 800ms ease-out infinite alternate;
 	background: #222922;
@@ -90,33 +79,25 @@ body {
 	color: #efe;
 	outline: none;
 }
-
 .search-section input:focus::-webkit-input-placeholder { 
 	color: #efe;
 }
-
 .search-section input:focus:-moz-placeholder {
 	color: #efe;
 }
-
 .main-button {
 	background: #222;
 	background: linear-gradient(#333, #222);
-	box-sizing: border-box;
 	border: 1px solid #444;
 	border-left-color: #000;
 	box-shadow: 0 2px 0 #000;
 	color: #888;	
 	font-size: 15px;
-	font-weight: 400;
 	height: 60px;
 	width: 100px;	
 	line-height: 40px;
-	/*position: relative;*/
 	text-shadow: 0 -1px 0 #000;
-	margin-top: 40px;
 }	
-
 .main-button:hover,
 .main-button:focus {
 	background: #292929;
@@ -127,15 +108,21 @@ body {
 .link{
 	text-decoration: none;
 	color: #0e775b;	
+	cursor: pointer;	 	
 }
-
+current a, a:hover {
+	border-bottom: 2px solid #0e775b;
+}
+.divider-slash {
+	color: #0e775b;	
+	
+}
 .main-button:active {
 	background: #292929;
 	background: linear-gradient(#393939, #292929);
 	box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
 	top: 1px;
 }
-
 @keyframes glow {
     0% {
 		border-color: #1affc1;
@@ -146,50 +133,159 @@ body {
 		box-shadow: 0 0 20px rgba(0,255,0,.6), inset 0 0 10px rgba(0,255,0,.4), 0 2px 0 #000;
     }
 }
+.search-button, .saved-button {
+	margin: 1%;
+}
 
  /*DISPLAYED SEARCH RESULTS*/
+ #search-saved-section {
+	 background: #111;
+ }
+ .search-result-section {
+	 display: flex;
+	 justify-content: center;
+ }
 .search-result-content {
- 	width: 60%;
- 	margin: 0 auto;
- 	min-height: 500px;
- 	margin-top: 30px;
- 	background: linear-gradient(#1b1b1b, #111);
+	display: flex;	
 	border: 1px solid #000;
 	box-shadow: inset 0 0 0 1px #272727;
-	font-size: 35px;
+	font-size: 20px;
 	padding: 40px 20px;
-	position: relative;
-	z-index: 1;
-	margin-bottom: 50px;
-	margin-top: 50px;
 	opacity: 0.9;
-	overflow-y: auto;
+	flex-direction: column;
+	width: 70%;
  }
  .search-result-content div {
- 	line-height:30px;
  	border:1px solid #333;
  	min-width:200px;
- 	position:relative;
- 	z-index:20;
  	color:#eee;
  	padding: 20px;
  }
-.back-button{
-	height: 80px;
-	width: 130px;	
-	line-height: 20px;
-	text-align: center;
-	margin-top: 20px;
-	display: flex;
-  justify-content: center;
-  align-items: center;
+ .hero-text {
+	 color: #0e775b;
+	 font-weight: bold;
+ }
+ .save-href {
+	color: #0e775b;
+	cursor: pointer;	 
+ }
+ .search-result-button-div {
+	 display: flex;
+	 justify-content: center;
+ }
+.back-button, .go-to-saved-button{
+	width: 120px;
+	margin: 1%;
 }
 .search-term-div {
 	text-align: center;
 	color: #1affc1;
 	font-size: 26px;
+	line-height: 1.5;
 }
-.snippet {
-	font-size: 20px;
-	color: yellowgreen;
+/* SAVED */
+.container {
+	display: flex;
+	justify-content: center;
 }
+.saved-article-title {
+	display: flex;
+	justify-content: center;
+}
+.saved-article-title span {
+	color: #0e775b;
+	font-size: 26px;
+	font-weight: bold;
+}
+.saved-article-content {
+   display: flex;	
+   border: 1px solid #000;
+   box-shadow: inset 0 0 0 1px #272727;
+   font-size: 20px;
+   padding: 40px 20px;
+   opacity: 0.9;
+   flex-direction: column;
+   width: 70%;
+}
+.saved-article-content div {
+	border:1px solid #333;
+	min-width:200px;
+	color:#eee;
+	padding: 20px;
+	line-height: 1.5;
+}
+.saved-section-button-div {
+	display: flex;
+	justify-content: center;
+}
+
+/* MEDIA QUERIES */
+@media all and (max-width: 500px) {
+	body, html {
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+	}
+	.search-section {	
+		width: 90%;
+		height: 100%;
+	}
+	#submit-form {
+		width: 80%;
+		display: flex;
+		justify-content: center;		
+	}
+	.search-section input {
+		height: 60px;				
+	}
+	.search-section label {
+		font-size:1.5em;
+		font-weight: bold;
+		margin-bottom: 5%;
+	}
+	.search-term-div {
+		padding: 10px;
+		font-size: 1.5em; 
+	}
+	.snippet {
+		border: none;
+	}
+	.search-result-content {
+		border: none;
+		padding: 0;
+	}
+	.search-result-content div {
+		padding: 10px 0;
+		line-height: 1.5em;
+	}
+	.search-result-button div {
+		border: none;
+	}
+	
+}
+@media all and (min-width: 501px) and (max-width: 1024px) {
+	body, html {
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+	}
+	.search-section {	
+		width: 80%;
+		height: 50%
+	}
+	#submit-form {
+		width: 80%;
+		height: 80%;
+		display: flex;
+		justify-content: center;		
+	}
+	.search-section input {
+		height: 60px;				
+	}
+	.search-section label {
+		font-size:2em;
+		/* font-weight: bold; */
+		margin-bottom: 5%;
+	}
+}
+
